@@ -1,3 +1,8 @@
+ags (0.6.56)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed do proper unlink channel as destroying it
+
 ags (0.6.55)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
